<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_View_Message"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/app_color"
        android:layout_height="wrap_content"
        android:text="@string/otp" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="start"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:paddingStart="10dp"
        android:textColor="@color/app_color"
        android:layout_height="wrap_content"
        android:text="@string/enter_code" />

    <EditText
        android:id="@+id/edit_Text_OTP"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:inputType="number"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/app_color"
        android:textStyle="bold"
        android:background="@drawable/custom_button_outline"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_Confirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_full"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_full"
            android:layout_marginStart="25dp"/>

    </LinearLayout>


</LinearLayout>